# esp_ota

./: CMakeLists.txt  README.md  app-flash_args  compare  config.cp  sdkconfig  sdkconfig.old
components/app/: CMakeLists.txt
components/app/include/: ota_test.h
components/app/src/: ota_test.c
components/hardware/: CMakeLists.txt
components/hardware/include/: gpio.h  led.h  wifi.h
components/hardware/src/: led.c  wifi.c
hardware/: CMakeLists.txt  gpio.c  touch.h
main/: CMakeLists.txt  Kconfig.projbuild  esp32_wifi_ota.c  main.c  main.h
main/app/: CMakeLists.txt  gpio.c  touch.c  touch.h  wifi.c
